# AutoMute

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md
.claude/skills/create/: skill.md
.github/workflows/: ci.yml
automute/: app_main.cpp  detect_main.cpp  engine.cpp  engine.h  feat_probe.cpp  gui_html.cpp  gui_main.cpp  main.cpp  ort_probe.cpp  passthrough_main.cpp  ploop_probe.cpp  sim_probe.cpp
automute/audio/: app_router.cpp  app_router.h  audio_devices.cpp  audio_devices.h  audio_sessions.cpp  audio_sessions.h  com_ptr.h  embedder.cpp  embedder.h  history_ring.h  loopback_capture.cpp  loopback_capture.h  process_loopback.cpp  process_loopback.h  render_playback.cpp  render_playback.h  resampler.cpp  resampler.h  ring_buffer.h  wav_io.cpp  wav_io.h
docs/: DESIGN.md  STATUS.md  roadmap.md  testing.md
docs/exec-plans/: m2-speaker-id.md  m4-app-shell.md  productization.md  ui-polish.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  webview.d.ts
scripts/: embed-frontend.mjs  fetch-deps.ps1  make-test-speakers.py
tests/: CMakeLists.txt
tests/integration/: embedder_test.cpp  persistence_test.cpp
tests/smoke/: smoke.ps1
tests/unit/: history_ring_test.cpp  resampler_test.cpp  ring_buffer_test.cpp
